--- a/src/styles.css
+++ b/src/styles.css
@@ -3,5 +3,24 @@
 @tailwind utilities;
 
 .front-container{
-    background: linear-gradient(to bottom, rgb(239, 239, 239) 50%, rgb(1, 1, 78) 50%);
 }
+.image-stack {
+    background: linear-gradient(to bottom, rgb(239, 239, 239) 50%, rgb(1, 1, 78) 50%);
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    position: relative;
+  }
+  .image-stack__item--top {
+    grid-column: 1 / span 8;
+    grid-row: 1;
+    padding-top: 20%;
+    z-index: 1
+  }
+  .image-stack__item--bottom {
+    grid-column: 4 / -1;
+    grid-row: 1; 
+  }
+  .table-img{
+      width: 500px;
+  }
+    
