--- a/public/styles.css
+++ b/public/styles.css
@@ -4259,6 +4259,18 @@ textarea.form-control.is-invalid {
   margin-left: 1rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
 .block {
   display: block;
 }
