--- a/public/styles.css
+++ b/public/styles.css
@@ -4646,7 +4646,7 @@ textarea.form-control.is-invalid {
 }
 
 .section-9{
-  background-image: url(../public/assets/images/light-bulb.avif);
+  background-image: url(./assets/images/light-bulb.avif);
   background-position: center;
   height: 833px;
 }
