--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,7 @@ font-weight: 700
       color: #101653
   }
   .section-9{
-      background-image: url(../public/assets/images/light-bulb.avif);
+      background-image: url(../public/assets/images/light-bulb.jpg);
       background-position: center;
       height: 833px;
   }
