light flicker function

--- a/public/styles.css
+++ b/public/styles.css
@@ -4637,6 +4637,7 @@ textarea.form-control.is-invalid {
   background-image: url(./assets/images/light-bulb.jpg);
   background-position: center;
   height: 833px;
+  background-size: cover;
 }
 
 .section-9-p{
@@ -4652,6 +4653,25 @@ textarea.form-control.is-invalid {
   background-color: white;
   color: #101653;
 }
+
+/* #fade_out {
+    position:relative;
+    height:100%;
+    width:auto;
+    margin:0 auto;
+  }
+  
+  #fade_out img {
+    position:absolute;
+    left:0;
+    -webkit-transition: opacity 2s linear;
+    -moz-transition: opacity 2s linear;
+    transition: opacity 2s linear;
+  }
+  
+  #fade_out img.top:hover {
+    opacity:0;
+  } */
 
   
   
