--- a/styles.css
+++ b/styles.css
@@ -4251,8 +4251,8 @@ textarea.form-control.is-invalid {
   margin-right: 5rem;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .ml-4 {
@@ -4319,10 +4319,6 @@ textarea.form-control.is-invalid {
   height: 5rem;
 }
 
-.h-48 {
-  height: 12rem;
-}
-
 .max-h-96 {
   max-height: 24rem;
 }
@@ -4353,10 +4349,6 @@ textarea.form-control.is-invalid {
 
 .w-1\/4 {
   width: 25%;
-}
-
-.w-2\/6 {
-  width: 33.333333%;
 }
 
 .max-w-xs {
@@ -4420,10 +4412,6 @@ textarea.form-control.is-invalid {
   align-items: center;
 }
 
-.justify-start {
-  justify-content: flex-start;
-}
-
 .justify-end {
   justify-content: flex-end;
 }
@@ -4454,10 +4442,6 @@ textarea.form-control.is-invalid {
 
 .rounded {
   border-radius: 0.25rem;
-}
-
-.border-8 {
-  border-width: 8px;
 }
 
 .border-4 {
@@ -4532,6 +4516,10 @@ textarea.form-control.is-invalid {
 
 .p-28 {
   padding: 7rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-4 {
@@ -4646,9 +4634,10 @@ textarea.form-control.is-invalid {
 }
 
 .section-9{
-  background-image: url(../public/assets/images/light-bulb.avif);
+  background-image: url(./assets/images/light-bulb.jpg);
   background-position: center;
   height: 833px;
+  background-size: cover;
 }
 
 .section-9-p{
@@ -4660,16 +4649,29 @@ textarea.form-control.is-invalid {
   color: rgb(11, 72, 138);
 }
 
-.swiper{
-  width: 600px;
-  height: 300px;
+.footer-btn:hover{
+  background-color: white;
+  color: #101653;
 }
 
-.swiper-slide{
-  display: flex;
-  justify-content: center;
-  align-items: center
-}
+/* #fade_out {
+    position:relative;
+    height:100%;
+    width:auto;
+    margin:0 auto;
+  }
+  
+  #fade_out img {
+    position:absolute;
+    left:0;
+    -webkit-transition: opacity 2s linear;
+    -moz-transition: opacity 2s linear;
+    transition: opacity 2s linear;
+  }
+  
+  #fade_out img.top:hover {
+    opacity:0;
+  } */
 
   
   
